# py-Skritt

./: README.md  a.py  mypy.ini  pyproject.toml  requirements.txt  run.py  slowrun.sh
Skritt/: __init__.py  base.py  logging.py  res.py  skritt.py  step.py  subprocess.py
tests/: test_argparse.py  test_base.py  test_base_hook.py  test_flow.py  test_logging.py  test_resource.py  test_step.py  test_step_logging.py
